# vapoursynth-editor

./: .gitignore  CMakeLists.txt  README.md
common-src/: aligned_vector.h  chrono.h  helpers.cpp  helpers.h  helpers_gui.cpp  helpers_gui.h  ipc_defines.h
common-src/application_instance_file_guard/: application_instance_file_guard.cpp  application_instance_file_guard.h
common-src/frame_header_writers/: frame_header_writer.cpp  frame_header_writer.h  frame_header_writer_null.cpp  frame_header_writer_null.h  frame_header_writer_y4m.cpp  frame_header_writer_y4m.h
common-src/jobs/: fps_buffer.h  job.cpp  job.h  job_variables.cpp  job_variables.h
common-src/libp2p/: p2p.h  p2p_api.cpp  p2p_api.h  v210.cpp
common-src/libp2p/simd/: cpuinfo_x86.cpp  cpuinfo_x86.h  p2p_simd.cpp  p2p_sse41.cpp
common-src/log/: log_styles_model.cpp  log_styles_model.h  styled_log_view.cpp  styled_log_view.h  styled_log_view_core.cpp  styled_log_view_core.h  styled_log_view_settings_dialog.cpp  styled_log_view_settings_dialog.h  styled_log_view_structures.cpp  styled_log_view_structures.h  vs_editor_log.cpp  vs_editor_log.h  vs_editor_log_definitions.cpp
common-src/settings/: settings_definitions.cpp  settings_definitions.h  settings_definitions_core.cpp  settings_definitions_core.h  settings_manager.cpp  settings_manager.h  settings_manager_core.cpp  settings_manager_core.h
common-src/timeline_slider/: timeline_slider.cpp  timeline_slider.h
common-src/vapoursynth/: vapoursynth_script_processor.cpp  vapoursynth_script_processor.h  vs_pack_rgb.cpp  vs_script_library.cpp  vs_script_library.h  vs_script_processor_structures.cpp  vs_script_processor_structures.h
pro/vsedit/: vsedit.pro
pro/vsedit-job-server/: vsedit-job-server.pro
pro/vsedit-job-server-watcher/: vsedit-job-server-watcher.pro
qdarkstyle/: style.qss
resources/: vsedit.qrc
vsedit-job-server-watcher/src/: connect_to_server_dialog.cpp  connect_to_server_dialog.h  connect_to_server_dialog.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  trusted_clients_addresses_dialog.cpp  trusted_clients_addresses_dialog.h  trusted_clients_addresses_dialog.ui
vsedit-job-server-watcher/src/jobs/: job_dependencies_delegate.cpp  job_dependencies_delegate.h  job_edit_dialog.cpp  job_edit_dialog.h  job_edit_dialog.ui  job_state_delegate.cpp  job_state_delegate.h  jobs_model.cpp  jobs_model.h
vsedit-job-server/src/: job_server.cpp  job_server.h  main.cpp
vsedit-job-server/src/jobs/: job_definitions.h  jobs_manager.cpp  jobs_manager.h
vsedit/src/: job_server_watcher_socket.cpp  job_server_watcher_socket.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
vsedit/src/frame_consumers/: benchmark_dialog.cpp  benchmark_dialog.h  encode_dialog.cpp  encode_dialog.h  encode_dialog.ui
vsedit/src/preview/: preview_advanced_settings_dialog.cpp  preview_advanced_settings_dialog.h  preview_area.cpp  preview_area.h  preview_dialog.cpp  preview_dialog.h  preview_dialog.ui  scroll_navigator.cpp  scroll_navigator.h
vsedit/src/script_editor/: number_matcher.cpp  number_matcher.h  script_completer.cpp  script_completer.h  script_completer_model.cpp  script_completer_model.h  script_editor.cpp  script_editor.h  syntax_highlighter.cpp  syntax_highlighter.h
vsedit/src/script_editor/fakevim/: editor.cpp  editor.h  fakevimactions.cpp  fakevimactions.h  fakevimhandler.cpp  fakevimhandler.h  fakevimtr.h
vsedit/src/script_editor/fakevim/private/: fakevim_export.h
vsedit/src/script_editor/fakevim/utils/: hostosinfo.h  qtcassert.h
vsedit/src/script_status_bar_widget/: script_status_bar_widget.cpp  script_status_bar_widget.h
vsedit/src/script_templates/: drop_file_category_model.cpp  drop_file_category_model.h  templates_dialog.cpp  templates_dialog.h  templates_dialog.ui
vsedit/src/settings/: actions_hotkey_edit_model.cpp  actions_hotkey_edit_model.h  clearable_key_sequence_editor.cpp  clearable_key_sequence_editor.h  item_delegate_for_hotkey.cpp  item_delegate_for_hotkey.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  theme_elements_model.cpp  theme_elements_model.h
vsedit/src/vapoursynth/: vapoursynth_plugins_manager.cpp  vapoursynth_plugins_manager.h  vs_plugin_data.cpp  vs_plugin_data.h  vs_script_processor_dialog.cpp  vs_script_processor_dialog.h
